--- a/dubbo-provider/pom.xml
+++ b/dubbo-provider/pom.xml
@@ -51,6 +51,17 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!-- Dubbo Spring Boot Starter -->
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+            <version>2.7.7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.meng</groupId>
+            <artifactId>dubbo-interface</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
