--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,11 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
-
+    <modules>
+        <module>dubbo-api</module>
+        <module>dubbo-interface</module>
+        <module>dubbo-provider</module>
+    </modules>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
